# NetraAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: pubspec.yaml
app/lib/: main.dart
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: index.css  main.tsx
ml/configs/: dr_grading.yaml  glaucoma_seg.yaml  iqa.yaml
ml/data/: augmentations.py  dataset.py  download.py  preprocess.py  quality_labels.py  splits.py
ml/evaluation/: calibration.py  confusion.py  evaluate.py  gradcam.py  tta.py
ml/export/: to_coreml.py  to_onnx.py  to_tflite.py
ml/models/: ensemble.py  glaucoma_unet.py  heads.py  iqa_model.py  retfound_wrapper.py
ml/monitoring/: drift.py
ml/scripts/: benchmark_latency.py  eval_best.py  eval_ensemble.py  evaluate_model.py  export_all.py  export_dr_onnx.py  generate_iqa_labels.py  train_aptos.py  train_dr.py  train_dr_v2.py  train_dr_v3.py  train_glaucoma.py  train_glaucoma_refuge.py  train_iqa.py  train_iqa_aptos.py  train_multi_disease.py  train_quick_test.py  validate_cross_dataset.py
ml/training/: callbacks.py  losses.py  metrics.py  schedulers.py  trainer.py
scripts/: run_local.sh  seed_db.py  seed_db.sh  setup.sh
server/: config.py  database.py  dependencies.py  main.py
server/api/: analytics.py  auth.py  compare.py  demo.py  eye_health.py  health.py  images.py  models.py  patients.py  report_demo.py  reports.py  screenings.py  stores.py  webhooks.py  ws.py
server/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py  request_id.py
tests/: conftest.py
(+88 files in other folders)
